--- a/css/responsive.css
+++ b/css/responsive.css
@@ -194,6 +194,7 @@
     }
     .banner-4 {
         padding: 180px 0 150px;
+        margin-top: -90px;
     }
 }
 
@@ -276,6 +277,10 @@
 
 @media (max-width:576px) {
     /*Countdown*/
+    .themeht-btn .dark-btn .ms-3 {
+        margin-top: 15px;
+        margin-right: -15rem !important;
+    }
     .countdown {
         margin: 30px 0;
     }
@@ -298,5 +303,13 @@
         top: inherit;
         right: inherit;
         margin-top: 30px;
+    }
+}
+
+@media (max-width:320px) {
+    /*Countdown*/
+    .banner-4 {
+        padding: 180px 0 150px;
+        margin-top: -219px;
     }
 }
