--- a/css/responsive.css
+++ b/css/responsive.css
@@ -273,6 +273,9 @@
         margin-right: 0;
         font-size: 20px;
     }
+    .banner-img .rounded .box-shadow .rounded .white-bg .p-5 {
+        top: 4% !important;
+    }
 }
 
 @media (max-width:576px) {
